# datasets

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-dev.in  requirements-visualization.in  requirements.in
atomic_datasets/: __init__.py  build.py  datamodule.py  datatypes.py  in_memory_dataset.py  periodic_table.py  utils.py
atomic_datasets/datasets/: __init__.py  cath.py  chembl3d.py  chembl3d_stereo.py  crossdocked.py  geom_drugs.py  platonic_solids.py  proteins.py  qm9.py  tetris.py  tmqm.py
atomic_datasets/utils/: __init__.py  ase.py  cache.py  decorators.py  download.py  periodic_table.py  rdkit.py  visualizer.py  xyz.py
atomic_datasets/wrappers/: __init__.py  jax.py  jraph.py  pyg.py  torch.py
examples/: .gitignore  example.ipynb  jax.ipynb  qm9.ipynb  torch.ipynb  viz.ipynb
scripts/: preprocess_chembl3d.py  preprocess_crossdocked.py  preprocess_geom.py  upload_to_zenodo.py
tests/wrappers/: jax.py  jraph.py  pyg.py  test_jax.py  test_torch.py
