[project]
name = "atomic-datasets"
description = "Datasets for the Atomic Architects!"
authors = [
    { name = "Ameya Daigavane" },
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Database",
]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
requires-python = ">=3.10"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
optional-dependencies = {"dev" = {file = ["requirements-dev.in"]}, "visualization" = {file = ["requirements-visualization.in"]}}
readme = {file = "README.md"}

[project.urls]
Homepage = "https://github.com/atomicarchitects/datasets"
Repository = "https://github.com/atomicarchitects/datasets.git"

[tool.ruff]
target-version = "py38"
line-length = 88
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "D",   # pydocstring
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.setuptools.packages.find]
where = ["."]
include = ["atomic_datasets"]
exclude = ["tests*"]

[tool.uv]
cache-keys = [{file = "requirements.in"}]
